--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div id="app">
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
+      <div class="box blue"></div>
+      <div class="box yellow"></div>
+      <div class="box green"></div>
     </div>
   </body>
 </html>
